--- a/Client/config.cfg
+++ b/Client/config.cfg
@@ -1,11 +1,12 @@
 [general]
 
 show_fps=true
+show_vel=true
 
 [player]
 
 mouse_sensitivity=0.1
-fov=100.0
+fov=110.0
 
 [video]
 
@@ -14,5 +15,5 @@ msaa=true
 
 [audio]
 
-sound_volume=0.4
-music_volume=0.18
+sound_volume=0.27
+music_volume=0.5
